- GTUNE: Add the condition for `bgwriter_lru_maxpages` to be well-adapted with associated workload
- GTUNE: The parameter `archive_timeout` is from 15 minutes bumped to 30-45 minutes as many current servers don't use the log-shipping method anymore, but streaming and logical replication.
- GTUNE: Add the configurations of `join_collapse_limit`, `from_collapse_limit`, and `plan_cache_mode`.
- GTUNE: Rework the self-tuning of `parallel_tuple_cost` configuration
- STUNE: Reduce the result of `cpu_tuple_cost` and `parallel_tuple_cost`
- STUNE: Simplify (reduce) configuration value of `default_statistics_target`
- STUNE: Simplify (reduce) configuration value of `after_commit_delay` to be workload-based rather than disk-based
- STUNE: Simplify (increase) configuration value of `bgwriter_delay` (8ms reduction per 1000 IOPS than 10ms)
- STUNE: Reduce the upper bound of `vacuum_*_min_age` from 25% of associated `vacuum_*_max_age` to 15%
- STUNE: Stop enforce the option `opt_wal_buffers` to be higher than `PG_PROFILE_OPTMODE.NONE`
- STUNE: Reduce by half the alignment size of `min_wal_size`, `max_wal_size`, and `wal_keep_size` (The configuration would be better detailed).
- STUNE: The two parameters `statement_timeout` and `lock_timeout` is reduced significantly.
- STUNE: A typo in `backend_flsuh_after` has been corrected from 512 MiB to 512 KiB.

Others:
- PY_BKE: The GC has been pushed more with better GC management.
- PY_WEB: The request's limit has been bumped from 15 reqs per window to 250 reqs (on DEV) and 180 (on PROD)
- PY_BKE: The initialization on `./src/__init__.py` is improved with better logic. This includes the change in the `./src/utils`, `./src/static` (removed), `./src/tuner/data`, ... modules
- PY_BKE: The general optimizer has been moved out-of-class to be functional
- PY_BKE: Add the method :func:`PG_TUNE_ITEM.__repr__()` and remove the argument `output_if_difference_only` in :func:`PG_TUNE_ITEM.out()`/