@@ -31,7 +31,8 @@ Algorithm Changes:
 - GTUNE: Add the condition for `bgwriter_lru_maxpages` to be well-adapted with associated workload
 - GTUNE: The parameter `archive_timeout` is from 15 minutes bumped to 30-45 minutes as many current servers don't use the log-shipping method anymore, but streaming and logical replication.
 - GTUNE: Add the configurations of `join_collapse_limit`, `from_collapse_limit`, and `plan_cache_mode`.
-- GTUNE: Rework the self-tuning of `parallel_tuple_cost` configuration
+- GTUNE: Rework the self-tuning of `parallel_tuple_cost` configuration.
+- GTUNE: Adjust the scale ratio `max_parallel_workers` (vcpu * 1.125 ->> vcpu * 1.25 + 1) and `max_parallel_workers_per_gather` (vcpu / 3 ->> vcpu / 2.5) to have more parallel workers 
 - STUNE: Reduce the result of `cpu_tuple_cost` and `parallel_tuple_cost`
 - STUNE: Simplify (reduce) configuration value of `default_statistics_target`
 - STUNE: Simplify (reduce) configuration value of `after_commit_delay` to be workload-based rather than disk-based
